fix for input on iphone

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -76,6 +76,7 @@ body, html {
 
 .bottomGreen {
   border-bottom: 1px solid #66CC75;
+  border-radius: 0;
 }
 
 .list {
